<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/lbl_gestion_productos"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/lbl_codigo"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_codigo"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_producto"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_producto"
                android:ems="10"
                android:enabled="false"
                android:inputType="text">

                <requestFocus/>
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_precio"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_precio"
                android:ems="10"
                android:enabled="false"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_existencia"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_existencia"
                android:ems="10"
                android:enabled="false"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_caducidad"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_fecha_caducidad"
                android:ems="10"
                android:enabled="false"
                android:inputType="date"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_actualizar"
                    android:text="@string/lbl_actualizar"
                    style="?android:attr/buttonStyleSmall"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_eliminar"
                    android:text="@string/lbl_eliminar"
                    style="?android:attr/buttonStyleSmall"/>

                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_Cancelar"
                    android:text="@string/lbl_cancelar"
                    style="?android:attr/buttonStyleSmall"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>